--- a/.github/workflows/check-change.yml
+++ b/.github/workflows/check-change.yml
@@ -16,17 +16,18 @@ jobs:
 
       - run: yarn
 
-      - run: yarn checkchange
-      #   if: ${{ github.actor != 'renovate[bot]' }}
-
       # This is how I was working around the inability to have renovate add the change files itself
       # - name: Add change files for renovate bot
+      #   if: ${{ github.event.pull_request.user.login == 'renovate[bot]' }}
       #   run: |
       #     git remote set-url origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git
       #     git config user.name 'Renovate Bot'
       #     git config user.email 'bot@renovateapp.com'
-      #     yarn change --type patch --message "Updating dependencies"
+      #     yarn change --type patch --message "$PR_TITLE"
       #     git push origin HEAD:$GITHUB_HEAD_REF
-      #   if: ${{ github.actor == 'renovate[bot]' }}
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     PR_TITLE: ${{ github.event.pull_request.title }}
+      # - name: Add change files for renovate bot
+
+      - run: yarn checkchange
